<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="1"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_call"
        android:orderInCategory="2"
        android:title="@string/menu_call"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_website"
        android:orderInCategory="3"
        android:title="@string/menu_website"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>