<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/struct_product_create"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"
            />
        <EditText
            android:id="@+id/name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/words_name"
            android:autofillHints="true"
            />
        <EditText
            android:id="@+id/description"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:lines="8"
            android:minLines="6"
            android:gravity="start"
            android:maxLines="10"
            android:fontFamily="sans-serif"
            android:hint="@string/words_description"
            android:autofillHints="true"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>