<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:background="@color/colorPrimaryDark"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/headerUnknown"

                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/struct_connect"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:layout_weight="1"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/words_connect"
                    android:backgroundTint="#fff"
                    android:paddingHorizontal="30dp"
                    android:id="@+id/buttonConnect"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/headerKnown"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/words_welcome"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:id="@+id/welcome"

                    />

                <Button
                    android:id="@+id/buttonDisconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#fff"
                    android:paddingHorizontal="30dp"
                    android:text="@string/words_connect"

                    />
            </LinearLayout>
        </ViewFlipper>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>